fixing up spacing between case study intro and the rest

--- a/styles/Item.module.scss
+++ b/styles/Item.module.scss
@@ -28,6 +28,7 @@
 
       .case_study_intro {
         padding: 0 #{$gutter_desktop * 2};
+        margin-bottom: -8%;
 
         .title_image {
           display: flex;
